--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-
+apply plugin: 'org.greenrobot.greendao' // apply plugin
 android {
-    compileSdkVersion 27
+    compileSdkVersion ANDROID_COMPLILE_SDK_VERSION as int
     defaultConfig {
         applicationId "com.mylove2018"
-        minSdkVersion 15
-        targetSdkVersion 27
+        minSdkVersion rootProject.ext.minSdk
+        targetSdkVersion rootProject.ext.targetSdk
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -19,7 +19,11 @@ android {
         }
     }
 }
-
+greendao {
+    schemaVersion 1
+    daoPackage 'com.mylove2018.greendao'
+    targetGenDir 'src/main/java'
+}
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.0.2'
@@ -35,6 +39,19 @@ dependencies {
     compile 'com.diegodobelo.expandingview:expanding-view:0.9.4'
     compile 'com.github.vipulasri:timelineview:1.0.5'
     implementation 'com.android.support:cardview-v7:27.0.2'
+    //图标库
+    compile 'com.joanzapata.iconify:android-iconify-fontawesome:2.2.2' // (v4.5)
+    //dialog
+    implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
+
+    //dialog
+    compile 'com.github.sd6352051:NiftyDialogEffects:v1.0.2'
+    compile 'com.google.code.gson:gson:2.8.2'
+    //图片选择
+    compile 'com.github.LuckSiege.PictureSelector:picture_library:v2.1.7'
+    compile 'org.greenrobot:greendao:3.2.2' // add library
+    compile 'com.blankj:utilcode:1.10.0'
+
 }
 
 repositories {
