--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,12 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2' // add plugin
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -20,9 +21,19 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral() // add repository
+        maven { url 'https://jitpack.io' }
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+ext {
+    compileSdk = 27
+    minSdk = 17
+    targetSdk = 27
+    support = "27.0.2"
+    buildTools = "27.0.1"
+    buildstyle = "debug"
 }
