--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,9 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx1536m
-
+ANDROID_COMPLILE_SDK_VERSION=27
+ANDROID_BUIDLE_SDK_VERSION=27.0.1
+ANDROID_TEXT=TEST
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
